--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     docker:
       - image: circleci/python:3.6.4  # primary container for this build
       - image: circleci/mongo:4.2.3
+      - image: spotify/kafka
         environment:
           MONGO_INITDB_ROOT_USERNAME: admin
           MONGO_INITDB_ROOT_PASSWORD: admin
