--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           name: Configure MongoDB
           command: |
             ./mongo admin --eval 'db.createUser({ user: "admin", pwd: "admin", roles: [{ role: "userAdminAnyDatabase", db: "admin" }]})'
-            ./mongo main -uadmin -padmin --authenticationDatabase admin --eval 'db.createUser({ user: "test", pwd: "test", roles: [{ role: "dbOwner", db: "main" }]})'
+            ./mongo test -uadmin -padmin --authenticationDatabase admin --eval 'db.createUser({ user: "test", pwd: "test", roles: [{ role: "dbOwner", db: "CryptoCalculatorService" }]})'
 
       - run:
           name: Runnning tests
