--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
           name: Configure MongoDB
           command: |
 
-            mongo admin --eval 'db.createUser({ user: "admin", pwd: "admin", roles: [{ role: "userAdminAnyDatabase", db: "admin" }]})'
-            mongo test -uadmin -padmin --authenticationDatabase admin --eval 'db.createUser({ user: "test", pwd: "test", roles: [{ role: "dbOwner", db: "CryptoCalculatorService" }]})'
+            mongo admin --eval 'db.addUser({ user: "admin", pwd: "admin", roles: [{ role: "userAdminAnyDatabase", db: "admin" }]})'
+            mongo test -uadmin -padmin --authenticationDatabase admin --eval 'db.addUser({ user: "test", pwd: "test", roles: [{ role: "dbOwner", db: "CryptoCalculatorService" }]})'
 
       - run:
           name: Runnning tests
