--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,7 @@ jobs:
       - run:
           name: Configure MongoDB
           command: |
-            mongo admin --eval 'db.addUser( { user: "admin", pwd: "admin", roles: [ { role: "userAdminAnyDatabase", db: "admin" } ] } )'
-            mongo test -u admin -p admin --authenticationDatabase admin --eval 'db.addUser({ user: "test", pwd: "test", roles: [{ role: "dbOwner", db: "CryptoCalculatorService" }]})'
+            mongo admin --eval 'db.createUser( { user: "admin", pwd: "admin", roles: [ { role: "userAdminAnyDatabase", db: "admin" } ] } )'
       - run:
           name: Runnning tests
           command: |
