Scedhuler.py PricesService.py BalanceService.py PricesService_test.py

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
       - run:
           name: Runnning tests
           command: |
+            cd CryptoCalculatorService/tests
             . venv/bin/activate
             py.test -vv CryptoCalculatorService/tests
       - run:
