--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: "Setup custom environment variables"
           command: |
-            echo 'export FLASK_ENV=development'
+            echo 'export FLASK_ENV=CryptoCalculatorService.config.DevelopmentConfig'
       - run:
           name: Wait for Mongo to start
           command: dockerize -wait tcp://127.0.0.1:27017 -timeout 120s
