--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
           name: Runnning tests
           command: |
             . venv/bin/activate
+            cd CryptoCalculatorService/tests
             py.test -vv CryptoCalculatorService/tests
       - run:
           name: Code coverage
