--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,9 +44,9 @@ jobs:
           name: Runnning tests
           command: |
             . venv/bin/activate
-             cd CryptoCalculatorService/tests && py.test -vv CryptoCalculatorService/tests
+            py.test -vv CryptoCalculatorService/tests
       - run:
           name: Code coverage
           command: |
              . venv/bin/activate
-             cd CryptoCalculatorService/tests && py.test --cov=CryptoCalculatorService
+             py.test --cov=CryptoCalculatorService
