--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,4 +49,4 @@ jobs:
           name: Code coverage
           command: |
              . venv/bin/activate
-             py.test --cov=CryptoCalculatorService --ignore="tests"
+             py.test --cov=CryptoCalculatorService --ignore="CryptoCalculatorService/tests"
